--- a/k8s/mysql.yaml
+++ b/k8s/mysql.yaml
@@ -1,42 +1,4 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mysql
-  labels:
-    app: mysql
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: mysql
-  template:
-    metadata:
-      labels:
-        app: mysql
-    spec:
-      containers:
-      - name: mysql
-        image: mysql:8.0
-        ports:
-        - containerPort: 3306
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: "password"
-        - name: MYSQL_DATABASE
-          value: "microservices"
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "250m"
-          limits:
-            memory: "1Gi"
-            cpu: "500m"
-        volumeMounts:
-        - name: mysql-storage
-          mountPath: /var/lib/mysql
-      volumes:
-      - name: mysql-storage
-        emptyDir: {}
+apiVersion: apps/v1kind: Deploymentmetadata:  name: mysql  labels:    app: mysql    component: databasespec:  replicas: 1  selector:    matchLabels:      app: mysql  template:    metadata:      labels:        app: mysql        component: database    spec:      securityContext:        # Security enhancement: run as non-root        runAsUser: 999        runAsGroup: 999        fsGroup: 999      containers:      - name: mysql        image: mysql:8.0        ports:        - containerPort: 3306        env:        - name: MYSQL_ROOT_PASSWORD          valueFrom:            secretKeyRef:              name: mysql-secret              key: root-password        - name: MYSQL_DATABASE          valueFrom:            secretKeyRef:              name: mysql-secret              key: database        # Health checks for production readiness        livenessProbe:          exec:            command: ["mysqladmin", "ping"]          initialDelaySeconds: 30          periodSeconds: 10          timeoutSeconds: 5          failureThreshold: 3        readinessProbe:          exec:            command: ["mysql", "-h", "127.0.0.1", "-e", "SELECT 1"]          initialDelaySeconds: 5          periodSeconds: 2          timeoutSeconds: 1          failureThreshold: 3        resources:          requests:            memory: "512Mi"            cpu: "250m"          limits:            memory: "2Gi"            cpu: "1000m"        volumeMounts:        - name: mysql-storage          mountPath: /var/lib/mysql        securityContext:          allowPrivilegeEscalation: false          capabilities:            drop:            - ALL            add:            - CHOWN            - SETUID            - SETGID      volumes:      - name: mysql-storage        persistentVolumeClaim:          claimName: mysql-data
 ---
 apiVersion: v1
 kind: Service
