--- a/backend/product-service/src/test/resources/application-test.properties
+++ b/backend/product-service/src/test/resources/application-test.properties
@@ -1,21 +1,18 @@
-# Test Database Configuration - Use H2 in-memory database for tests
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Test Database Configuration - Use embedded MongoDB for tests
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=0
+spring.data.mongodb.database=test-product-db
 
-# JPA/Hibernate Configuration for Tests
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# H2 Console (for debugging if needed)
-spring.h2.console.enabled=true
+# Disable Testcontainers for CI
+testcontainers.reuse.enable=false
+testcontainers.checks.disable=true
 
 # Disable Eureka for tests
 eureka.client.enabled=false
 
 # Test logging
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG 
+logging.level.org.springframework.data.mongodb=DEBUG
+
+# Use embedded MongoDB for tests
+spring.mongodb.embedded.version=4.4.18 
