--- a/backend/product-service/src/test/resources/application-test.properties
+++ b/backend/product-service/src/test/resources/application-test.properties
@@ -1,6 +1,4 @@
 # Test Database Configuration - Use embedded MongoDB for tests
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=0
 spring.data.mongodb.database=test-product-db
 
 # Disable Testcontainers for CI
@@ -14,5 +12,5 @@ eureka.client.enabled=false
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
 
-# Use embedded MongoDB for tests
-spring.mongodb.embedded.version=4.4.18 
+# Enable embedded MongoDB auto-configuration
+spring.mongodb.embedded.version=6.0.3 
