--- a/backend/product-service/src/test/resources/application-test.properties
+++ b/backend/product-service/src/test/resources/application-test.properties
@@ -1,4 +1,5 @@
-# Test Database Configuration - Use embedded MongoDB for tests
+# Test Database Configuration - Use Kubernetes MongoDB for tests
+spring.data.mongodb.uri=mongodb://admin:password@mongodb.default.svc.cluster.local:27017/test-product-db?authSource=admin
 spring.data.mongodb.database=test-product-db
 
 # Disable Testcontainers for CI
@@ -11,6 +12,3 @@ eureka.client.enabled=false
 # Test logging
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
-
-# Enable embedded MongoDB auto-configuration
-spring.mongodb.embedded.version=6.0.3 
