--- a/backend/product-service/src/main/resources/application.properties
+++ b/backend/product-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/product-service
-eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka/
+spring.data.mongodb.uri=mongodb://admin:password@mongodb.default.svc.cluster.local:27017/product-service?authSource=admin
+eureka.client.service-url.defaultZone=http://eureka:password@discovery-server.default.svc.cluster.local:8761/eureka/
 spring.application.name=product-service
 server.port=8080
 
