--- a/backend/product-service/src/test/resources/application-test.properties
+++ b/backend/product-service/src/test/resources/application-test.properties
@@ -1,5 +1,5 @@
 # Test Database Configuration - Use Kubernetes MongoDB for tests
-spring.data.mongodb.uri=mongodb://admin:password@mongodb.default.svc.cluster.local:27017/test-product-db?authSource=admin
+spring.data.mongodb.uri=mongodb://admin:SecureMongoPass2024!@mongodb.default.svc.cluster.local:27017/test-product-db?authSource=admin
 spring.data.mongodb.database=test-product-db
 
 # Disable Testcontainers for CI
