--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -102,7 +102,7 @@ pipeline {
                     }
                     post {
                         always {
-                            publishTestResults testResultsPattern: 'backend/product-service/target/surefire-reports/*.xml'
+                            junit testResults: 'backend/product-service/target/surefire-reports/*.xml', allowEmptyResults: true
                         }
                     }
                 }
@@ -117,7 +117,7 @@ pipeline {
                     }
                     post {
                         always {
-                            publishTestResults testResultsPattern: 'backend/inventory-service/target/surefire-reports/*.xml'
+                            junit testResults: 'backend/inventory-service/target/surefire-reports/*.xml', allowEmptyResults: true
                         }
                     }
                 }
@@ -132,7 +132,7 @@ pipeline {
                     }
                     post {
                         always {
-                            publishTestResults testResultsPattern: 'backend/order-service/target/surefire-reports/*.xml'
+                            junit testResults: 'backend/order-service/target/surefire-reports/*.xml', allowEmptyResults: true
                         }
                     }
                 }
