--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -3,7 +3,8 @@ pipeline {
     
     environment {
         DOCKER_REGISTRY = 'localhost:32000'
-        MAVEN_HOME = '/opt/maven'
+        JAVA_HOME = '/opt/java/openjdk'
+        MAVEN_HOME = '/tmp/apache-maven-3.9.6'
         PATH = "${MAVEN_HOME}/bin:${env.PATH}:/usr/local/bin"
         MAVEN_OPTS = '-Dmaven.repo.local=/var/jenkins_home/.m2/repository'
     }
@@ -35,6 +36,8 @@ pipeline {
                 echo '🔧 Verifying Build Environment...'
                 sh '''
                     echo "📊 Environment Status:"
+                    echo "Java Home: $JAVA_HOME"
+                    echo "Maven Home: $MAVEN_HOME"
                     echo "Java Version:"
                     java -version
                     echo "Maven Version:"
