--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -3,8 +3,7 @@ pipeline {
     
     environment {
         DOCKER_REGISTRY = 'localhost:32000'
-        JAVA_HOME = '/opt/java/openjdk'
-        MAVEN_HOME = '/tmp/apache-maven-3.9.6'
+        MAVEN_HOME = '/opt/maven'
         PATH = "${MAVEN_HOME}/bin:${env.PATH}:/usr/local/bin"
         MAVEN_OPTS = '-Dmaven.repo.local=/var/jenkins_home/.m2/repository'
     }
@@ -36,20 +35,17 @@ pipeline {
                 echo '🔧 Verifying Build Environment...'
                 sh '''
                     echo "📊 Environment Status:"
-                    echo "Java Home: $JAVA_HOME"
                     echo "Maven Home: $MAVEN_HOME"
                     echo "Java Version:"
                     java -version
                     echo "Maven Version:"
-                    mvn -version
+                    mvn --version
                     echo "Docker Version:"
                     docker --version
                     echo "kubectl Version:"
                     kubectl version --client
-                    echo "Node.js Version:"
-                    node --version
-                    echo "npm Version:"
-                    npm --version
+                    echo "Trivy Version:"
+                    trivy --version
                 '''
             }
         }
@@ -177,6 +173,56 @@ pipeline {
                                 docker tag ${DOCKER_REGISTRY}/order-service:${BUILD_NUMBER} ${DOCKER_REGISTRY}/order-service:latest
                                 echo "✅ Order Service Docker image built"
                             '''
+                        }
+                    }
+                }
+            }
+        }
+        
+        stage('🔒 Security Scanning') {
+            parallel {
+                stage('🛍️ Scan Product Service') {
+                    steps {
+                        sh '''
+                            echo "🔒 Scanning Product Service image for vulnerabilities..."
+                            trivy image --format table --exit-code 0 ${DOCKER_REGISTRY}/product-service:${BUILD_NUMBER}
+                            trivy image --format json --output product-service-scan.json ${DOCKER_REGISTRY}/product-service:${BUILD_NUMBER}
+                            echo "✅ Product Service security scan completed"
+                        '''
+                    }
+                    post {
+                        always {
+                            archiveArtifacts artifacts: 'product-service-scan.json', allowEmptyArchive: true
+                        }
+                    }
+                }
+                stage('📦 Scan Inventory Service') {
+                    steps {
+                        sh '''
+                            echo "🔒 Scanning Inventory Service image for vulnerabilities..."
+                            trivy image --format table --exit-code 0 ${DOCKER_REGISTRY}/inventory-service:${BUILD_NUMBER}
+                            trivy image --format json --output inventory-service-scan.json ${DOCKER_REGISTRY}/inventory-service:${BUILD_NUMBER}
+                            echo "✅ Inventory Service security scan completed"
+                        '''
+                    }
+                    post {
+                        always {
+                            archiveArtifacts artifacts: 'inventory-service-scan.json', allowEmptyArchive: true
+                        }
+                    }
+                }
+                stage('🛒 Scan Order Service') {
+                    steps {
+                        sh '''
+                            echo "🔒 Scanning Order Service image for vulnerabilities..."
+                            trivy image --format table --exit-code 0 ${DOCKER_REGISTRY}/order-service:${BUILD_NUMBER}
+                            trivy image --format json --output order-service-scan.json ${DOCKER_REGISTRY}/order-service:${BUILD_NUMBER}
+                            echo "✅ Order Service security scan completed"
+                        '''
+                    }
+                    post {
+                        always {
+                            archiveArtifacts artifacts: 'order-service-scan.json', allowEmptyArchive: true
                         }
                     }
                 }
